--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <build_depend>rosconsole</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>brics_actuator</build_depend>
 
@@ -18,6 +19,7 @@
   <run_depend>rosconsole</run_depend>
   <run_depend>cppunit</run_depend>
   <run_depend>std_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>brics_actuator</run_depend>
 </package>
