--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
   <build_depend>std_srvs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>brics_actuator</build_depend>
+  <build_depend>control_msgs</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rosconsole</run_depend>
@@ -22,4 +24,6 @@
   <run_depend>std_srvs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>brics_actuator</run_depend>
+  <run_depend>control_msgs</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
 </package>
